# Documentation-Maker-AI

./: LICENCE  README.md  doc_writer.py  env.example  gemini.py  main.py  plan.excalidraw  prompts.py  pyproject.toml  regex.py  run.py  scouter.py
.github/workflows/: publish.yml
CodeReviewer/: git_pull.py  main.py
docmakerai/: doc_writer.py  gemini.py  generator.py  git_pull.py  groq.py  scouter.py
