[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmakerai"
version = "0.1.3"
description = "Generate documentation for your repository"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[tool.hatchling.packages]
find = {where = ["."]}
[tool.hatch.build.targets.wheel]
packages = ["docmakerai"]